# Gadolinium

./: CMakeLists.txt  x86_64-pc_multiboot-gadolinium.ld
arch/x86_64/: .#paging.cpp  cxxabi.cpp  kmemlayout.h  paging.cpp  paging.hpp  startup.S  tables.S
core/: allocator.cpp  allocator.hpp  boot_information.hpp  elf64.h  list.hpp  logging.cpp  logging.hpp  main.cpp  page_allocator.cpp  page_allocator.hpp  stdint.h  string.cpp  string.hpp
plat/pc_multiboot/: grub.cfg.in  init.cpp  multiboot.S  multiboot2.h  multiboot2.hpp
